@@ -36,6 +36,11 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-09-03 DP  1.8.0  Fix the table, index and index constraint tablespace
+                      property combo boxes to allow changes to tablespace.
+2007-09-03 DP  1.8.0  Modify the object browser so that the expanded/collapsed
+                      state of child nodes is retained when a node is 
+                      refreshed.
 2007-07-19 DP  1.8.0  Refactor the Query Tool's execQuery function to prevent
                       pgAdmin freezing while two long running queries are 
                       executing simultaneously.
